# sudoku-generator

./: CMakeLists.txt  sudoku_checks.c  sudoku_game.c  sudoku_generator.c  sudoku_generator.h
src/: main.c  sudoku_checks.c  sudoku_checks.h  sudoku_generator.c  sudoku_generator.h  sudoku_utils.c  sudoku_utils.h
